docs/versioned_docs/version-4.x/fragments/config-profiles.mdx
```yaml
profiles:                           # struct[]  | Array of config profiles
- name: profile-name                # string    | Name of the profile
  name: parent-profile              # string    | Name of the parent of this profile (profile inheritance)
  patches:                          # struct[]  | Array of config patches
  - op: "replace"                   # enum      | Patch operation (replace, add, remove)
    path: "images.backend.cmd"      # string    | Jsonpath or xpath to config option that should be patched
    value: ""                       # arbitrary | Value to use for patch operation
    from: ""                        # string    | Jsonpath or xpath to config option which should be used as value for operation
  replace:                          # struct    | Array of replacements for entire config sections
    images: {}                      # struct    | Replacement for entire `images` section
    deployments: {}                 # struct    | Replacement for entire `deployments` section
    dev: {}                         # struct    | Replacement for entire `dev` section
    dependencies: {}                # struct    | Replacement for entire `dependencies` section
    hooks: {}                       # struct    | Replacement for entire `hooks` section
```
